# Memory-Management-Chatbot

./: .gitignore  CMakeLists.txt  README.md
include/: chatbot.h  chatgui.h
src/: answergraph.txt  chatbot.cpp  chatbot.h  chatgui.cpp  chatgui.h  chatlogic.cpp  chatlogic.h  graphnode.cpp  graphnode.h
